Arreglado ParserOrdered y ParserGroup para que esten mas cerca de ser el gran y verdadero parser, cortado un bucle raro en MejorPuntaje y ahora funciona :D
(tambien sacados unos warnings que teniamos de hace 3 años)